--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,13 @@
 <body>
     <div class="game-container">
         <header class="game-header">
-            <h1>🐍 贪吃蛇游戏</h1>
+            <div class="header-top">
+                <h1>🐍 贪吃蛇游戏</h1>
+                <div class="auth-buttons">
+                    <a href="/login" class="btn btn-auth btn-login">登录</a>
+                    <a href="/register" class="btn btn-auth btn-register">注册</a>
+                </div>
+            </div>
             <div class="score-board">
                 <div class="score-item">
                     <span class="score-label">得分</span>
